Spring-Boot Update

--- a/01-Spring_Overview/actuators_demo/dev_tools/src/main/resources/application.properties
+++ b/01-Spring_Overview/actuators_demo/dev_tools/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=dev_tools
-management.endpoints.web.exposure.include=health,info
+#Use wildcard "*" to expose all endpoints
+#can als expose individual endpoints with a comma-delimited list
+
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=health, info
 management.info.env.enabled=true
+
+
+info.app.name = My First Application Using SpringBoot
+info.app.description =  A crazy fun app
+info.app.version = 1.0.0
+
+
