Hibernate and JPA crud

--- a/03-springboot-hibernate-jpa-crud/01-cruddemo/cruddemo/src/main/resources/application.properties
+++ b/03-springboot-hibernate-jpa-crud/01-cruddemo/cruddemo/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.main.banner-mode=off
 #reduce logging level . set logging level to warn
 
 logging.level.root=warn 
+
+#Add logging configs to display sql statement
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.orm.jdbc.bind = trace
+
+
+#configuration for auto create the table
+spring.jpa.hibernate.ddl-auto=update
